# SIDR

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SIDR2.0  cmake_install.cmake
Microbe_testdata/: DSM44188.bam.bai  DSM44188.blast.out  DSM44188.genome.nextpolish.fasta.amb  DSM44188.genome.nextpolish.fasta.ann  DSM44188.genome.nextpolish.fasta.pac  submit_sidr.sh
Microbe_testdata/Results/: fulldata.txt  tokeep.txt  toremove.txt
htslib/: README  bcf_sr_sort.pico  bgzf.pico  bgzip  config.mk  config.status  errmod.pico  faidx.pico  hfile.pico  hfile_gcs.pico  hfile_libcurl.pico  hfile_net.pico  hfile_s3.pico  hts.pico  hts_os.pico  htsfile  kfunc.pico  knetfile.pico  kstring.pico  libhts.so.2  md5.pico  multipart.pico  probaln.pico  realn.pico  regidx.pico  sam.pico  synced_bcf_reader.pico  tabix  tbx.pico  textutils.pico  thread_pool.pico  vcf.pico  vcf_sweep.pico  vcfutils.pico
htslib/cram/: cram_codecs.pico  cram_decode.pico  cram_encode.pico  cram_external.pico  cram_index.pico  cram_io.pico  cram_samtools.pico  cram_stats.pico  files.pico  mFILE.pico  open_trace_file.pico  pooled_alloc.pico  rANS_static.pico  sam_header.pico  string_alloc.pico
src/: README.txt  analysis.py  analysis_new.py  analysis_old.py  analysis_old_caseversion.py  kmer_hash.c  kmer_hash.h  main.c  param.c  param.h  pipeline.c  pipeline.h  pylink.c  pylink.h  readme_pea.txt  sequence.c  sequence.h  sequencing_data.c  sequencing_data.h  taxonomy.c  taxonomy.h  test.py
